--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/KoyashiroKohaku/docker-compose-practice/todo-app#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/mysql2": "types/mysql2",
     "@types/node": "^12.12.54",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
